# chess-ex1-yazandahood8

./: PRACTICES.md  README.md
.github/workflows/: c-cpp.yml
Chess/: .gitignore  CMakeLists.txt
Chess/include/: Bishop.h  Board.h  Game.h  GameValidator.h  King.h  Knight.h  Move.h  MoveRecommender.h  MoveScorer.h  MyExceptions.h  Pawn.h  Piece.h  PriorityQueue.h  Queen.h  Rook.h  ValidatMove.h
Chess/src/: Bishop.cpp  Board.cpp  Chess.cpp  Game.cpp  GameValidator.cpp  King.cpp  Knight.cpp  MoveRecommender.cpp  MoveScorer.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  ValidatGame.cpp  ValidatMove.cpp  main.cpp
